--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 		            <div class="col-2">
 		                <div class="gallery-item">
-		                    <img src="img/iphone-vertical.png" alt="Gallery Image 2" class="gallery-img">
+		                    <img src="img/iPhone-vertical.png" alt="Gallery Image 2" class="gallery-img">
 		                </div>
 		            </div>
 
@@ -293,7 +293,7 @@
 
 
 			<!-- ROW 3 -->
-			<div class="row gx-2  gallery-container ">
+<!-- 			<div class="row gx-2  gallery-container ">
 				    <div class="col-sm-3">
 				    	<div class="gallery-item">
 					        <h2>VISUAL DEVELOPMENT</h2>
@@ -305,9 +305,9 @@
 					        <h5>Plein Air</h5>
 
 					    </div>    
-				    </div>
+				    </div> -->
 			    		            <!-- Single row of 3 images -->
-		            <div class="col-6">
+<!-- 		            <div class="col-6">
 		                <div class="gallery-item">
 		                    <img src="img/FO_Key1.jpeg" alt="Gallery Image 2" class="gallery-img">
 		                </div>
@@ -317,9 +317,9 @@
 		                <div class="gallery-item">
 		                    <img src="img/character_texture.png" alt="Gallery Image 3" class="gallery-img">
 		                </div>
-		            </div>	
+		            </div>	 -->
 
-			</div><!-- ROW 3 -->
+			<!-- </div> --><!-- ROW 3 -->
 
 	
 <!-- 			<img id = "home-page-photo" src = "img/la-3.png" alt = "TEAKAO"> -->	
