--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         
         @media (max-width: 2000px) {
             .gallery-img {
-                height: 450px;  /*Smaller height on mobile but still in a row */
+                height: 400px;  /*Smaller height on mobile but still in a row */
             }
         }
 
         .row {
-			height:  450px;
+			height:  400px;
 			/*background-color:  red;*/
 		}
 
@@ -112,7 +112,14 @@
 			margin-bottom:  100px;
 		}
 
+		h2 {
+			font-size: 25px;
+			font-weight:  bold;
+		}
 
+		h4{
+			font-size: 20px;
+		}
 
 		h5{
 			text-transform:  uppercase;
@@ -142,7 +149,7 @@
 		}
 
 		#name h2 {
-			font-size:  30px;
+			font-size:  20px;
 		    position: relative; /* For z-index to work */
 		    z-index: 1; /* Lower z-index */
 		    margin-top: 0; /* Remove top margin */
