--- a/index.html
+++ b/index.html
@@ -155,14 +155,12 @@
 		h5{
 			font-family:  arial;
 			font-size: 11px;
-			color:  darkgrey;
 		}
 
 		h6{
 			font-family:  helvetica;
 	/*		font-family:  monospace;*/
 			font-size: 11px;
-			color:  darkgrey;
 /*			text-align:  right;*/
 
 		}
@@ -173,6 +171,8 @@
 
 		#name {
 			font-family:  helvetica;
+			font-weight:  bold;
+			color:  black;
 /*		    line-height: 0.8;  Lower overall line height for the container */
 
 		}
@@ -198,13 +198,12 @@
 
 			<div class="col-sm-3">
 				<!-- <img id = "logo" src = "img/T_KAO.png" alt = "TEAKAO"> -->
-				<h4 id = "name">TKAO</h4>
+				<h4 id = "name">tiffany kao</h4>
 
 				<!-- <h2>EDITOR, ARTIST</h2>	 -->
 			</div>
 			<div class="col-9">
 				<ul id="navibar" >
-
 					<!-- use react but adding additional html for now -->
 
 					<li><a href="index.html">Video</a></li>
@@ -271,9 +270,11 @@
 
 		            <div class="col-2">
 		                <div class="gallery-item">
+		                	<a href="https://www.youtube.com/watch?v=7wxfSeW2kC0">
 					        <video class="gallery-img" autoplay loop muted playsinline>
 					            <source src="img/EmilyHenryLitCheck.mp4" type="video/mp4">
 					        </video>
+					        </a>
 					    </div>
 		            </div>
 
