--- a/about.html
+++ b/about.html
@@ -110,13 +110,13 @@
 			</div>
 			<div class="col-9">
 				<ul id="navibar" >
-
 					<!-- use react but adding additional html for now -->
 
 					<li><a href="index.html">Video</a></li>
+					<li><a href="concept_art.html">Concept Art</a></li>
 					<!-- <li><a href="paintings.php">Paintings</li> -->
 					<li><a href="design.html">Design</a></li>
-					<li><a href="personal.html">Art/Story</a></li>
+					<li><a href="personal.html">Paintings</a></li>
 					<!-- <li><a href="misc.php">MISC</a></li> -->
 					<li><a href="about.html">About</a></li>
 
@@ -127,10 +127,10 @@
  		<div id = "spacer"> </div>
  			<div class="row">
  				<div class="col-4">	
-			         <img src="img/kale.png" alt="Gallery Image 2">
+			         <img src="img/kale.png">
 				</div>
-				<div class="col-4" id="about">	
-					<p>Tiffany Kao is an artist, designer, and video editor whose work is deeply rooted in her early passion for concept art and world-building. She has previously worked with Reese's Book Club, where she edited and assistant produced an author interview series with Apple Books, featuring releases from Emily Henry and Riley Keough. She has also edited for the creative content team at NBCUniversal (America's Got Talent, Law & Order SVU, Night Court, Jimmy Fallon).</p>
+				<div class="col-6" id="about">	
+					<p>Tiffany Kao is an artist, designer, and video editor whose work is deeply rooted in her early passion for concept art and world-building. She has previously worked with <a href="https://hello-sunshine.com/">Reese's Book Club/Hello Sunshine</a>,  where she edited and assistant produced an author interview series with Apple Books, featuring releases from Emily Henry and Riley Keough. She has also edited for the creative content team at <a href="https://www.nbcuniversal.com/">NBCUniversal</a> (America's Got Talent, Law & Order SVU, Night Court, Jimmy Fallon).</p>
 
 					<p>Tiffany is a graduate of USC School of Cinematic Arts where she studied animation & digital arts and minored in computer programming. She is currently based in NYC.</p>
 
