--- a/design.html
+++ b/design.html
@@ -212,9 +212,10 @@
 					<!-- use react but adding additional html for now -->
 
 					<li><a href="index.html">Video</a></li>
+					<li><a href="concept_art.html">Concept Art</a></li>
 					<!-- <li><a href="paintings.php">Paintings</li> -->
 					<li><a href="design.html">Design</a></li>
-					<li><a href="personal.html">Art/Story</a></li>
+					<li><a href="personal.html">Paintings</a></li>
 					<!-- <li><a href="misc.php">MISC</a></li> -->
 					<li><a href="about.html">About</a></li>
 
