--- a/personal.html
+++ b/personal.html
@@ -54,7 +54,6 @@
         .container {
             max-width: 900px;
             margin: 0 auto;
-/*            padding: 20px;*/
         }
         
         .gallery-img {
@@ -108,13 +107,13 @@
 			</div>
 			<div class="col-9">
 				<ul id="navibar" >
-
 					<!-- use react but adding additional html for now -->
 
 					<li><a href="index.html">Video</a></li>
+					<li><a href="concept_art.html">Concept Art</a></li>
 					<!-- <li><a href="paintings.php">Paintings</li> -->
 					<li><a href="design.html">Design</a></li>
-					<li><a href="personal.html">Art/Story</a></li>
+					<li><a href="personal.html">Paintings</a></li>
 					<!-- <li><a href="misc.php">MISC</a></li> -->
 					<li><a href="about.html">About</a></li>
 
@@ -124,19 +123,22 @@
 			<div id = "spacer">
 	</div>	
 
-    	<div class="row">
-	        <div class="col-4">
-	            <div class="row">
+    	<div class="row gx-15">
+	        <div class="col-6">
+	        	<div class="row">
 	                <img src="img/desk.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/snow.png" alt="Gallery Image 2" class="gallery-img">
+	                <img src="img/oc_pleinair.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/oc_2.jpg" alt="Gallery Image 1" class="gallery-img">
+	                <img src="img/newport.png" alt="Gallery Image 1" class="gallery-img">
+	            </div>
+	            <div class="row">
+	                <img src="img/japan1.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	        </div>
-	        <div class="col-4">
+	        <div class="col-6">
 	        	<div class="row">
 	                <img src="img/la-3.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
@@ -147,18 +149,15 @@
 	                <img src="img/mochi.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/oc_1.jpg" alt="Gallery Image 2" class="gallery-img">
-	            </div>
-
-	        </div>
-	        <div class="col-4">
-	            <div class="row">
-	                <img src="img/japan1.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="img/snow.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
 	                <img src="img/nyc_mail.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
-        </div>    
+
+	        </div>
+
+
         </div>
     </div>
 </body>
