--- a/about/index.html
+++ b/about/index.html
@@ -111,15 +111,13 @@
 			<div class="col-9">
 				<ul id="navibar" >
 					<!-- use react but adding additional html for now -->
-
-					<li><a href="index.html">Video</a></li>
-					<li><a href="concept_art.html">Concept Art</a></li>
+					<li><a href="/">Video</a></li>
+					<li><a href="/concept_art">Concept Art</a></li>
 					<!-- <li><a href="paintings.php">Paintings</li> -->
-					<li><a href="design.html">Design</a></li>
-					<li><a href="personal.html">Paintings</a></li>
+					<li><a href="/design">Design</a></li>
+					<li><a href="/personal">Paintings</a></li>
 					<!-- <li><a href="misc.php">MISC</a></li> -->
-					<li><a href="about.html">About</a></li>
-
+					<li><a href="/about">About</a></li>
 				</ul> <!-- navbar -->
 			</div>
  		</div> 
