--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -123,78 +123,78 @@
 	</div>	
 
         <div class="row">
-            <img src="img/FO_1.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/FO_1.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
         <div class="row">
-            <img src="img/FO_2.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/FO_2.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
 	    <div class="row">
-            <img src="img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
     	<div class="row">
 	        <div class="col-6">
 	            <div class="row">
-	                <img src="img/FO_3.jpeg" alt="Gallery Image 1" class="gallery-img">
+	                <img src="../img/FO_3.jpeg" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/FO_4.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="../img/FO_4.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/FO_9.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="../img/FO_9.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	        </div>
 	        <div class="col-6">
 
 	            <div class="row">
-	                <img src="img/FO_6.jpeg" alt="Gallery Image 1" class="gallery-img">
+	                <img src="../img/FO_6.jpeg" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/FO_7.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="../img/FO_7.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/FO_8.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="../img/FO_8.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 
 	        </div>
 
 
 	    <div class="row">
-            <img src="img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
         <div class="row">
-            <img src="img/Icarus_cover.png" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/Icarus_cover.png" alt="Gallery Image 1" class="gallery-img">
         </div>
                 <div class="row">
-            <img src="img/ICARUS_02.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/ICARUS_02.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
        	<div class="row">
         <div class="col-6">
             <div class="row">
-                <img src="img/ICARUS_03.jpeg" alt="Gallery Image 1" class="gallery-img">
+                <img src="../img/ICARUS_03.jpeg" alt="Gallery Image 1" class="gallery-img">
             </div>
             <div class="row">
-                <img src="img/ICARUS_04.jpeg" alt="Gallery Image 2" class="gallery-img">
+                <img src="../img/ICARUS_04.jpeg" alt="Gallery Image 2" class="gallery-img">
             </div>
 
         </div>
         <div class="col-6">
 
             <div class="row">
-                <img src="img/ICARUS_05.jpeg" alt="Gallery Image 1" class="gallery-img">
+                <img src="../img/ICARUS_05.jpeg" alt="Gallery Image 1" class="gallery-img">
             </div>
             <div class="row">
-                <img src="img/ICARUS_06.jpeg" alt="Gallery Image 2" class="gallery-img">
+                <img src="../img/ICARUS_06.jpeg" alt="Gallery Image 2" class="gallery-img">
             </div>
 
 
         </div>
         <div class="row">
-            <img src="img/euphoria.png" alt="Gallery Image 1" class="gallery-img">
+            <img src="../img/euphoria.png" alt="Gallery Image 1" class="gallery-img">
         </div>
 
         </div>    
