--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -123,33 +123,33 @@
 	</div>	
 
         <div class="row">
-            <img src="../img/FO_1.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="/img/FO_1.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
         <div class="row">
-            <img src="../img/FO_2.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="/img/FO_2.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
 	    <div class="row">
-            <img src="../img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
+            <img src="/img/FO_5.jpeg" alt="Gallery Image 1" class="gallery-img">
         </div>
 
     	<div class="row">
 	        <div class="col-6">
 	            <div class="row">
-	                <img src="../img/FO_3.jpeg" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/FO_3.jpeg" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="../img/FO_4.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/FO_4.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="../img/FO_9.jpeg" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/FO_9.jpeg" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	        </div>
 	        <div class="col-6">
 
 	            <div class="row">
-	                <img src="../img/FO_6.jpeg" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/FO_6.jpeg" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
 	                <img src="/img/FO_7.jpeg" alt="Gallery Image 2" class="gallery-img">
