more img path fixes

--- a/about/index.html
+++ b/about/index.html
@@ -125,7 +125,7 @@
  		<div id = "spacer"> </div>
  			<div class="row">
  				<div class="col-4">	
-			         <img src="img/kale.png">
+			         <img src="/img/kale.png">
 				</div>
 				<div class="col-6" id="about">	
 					<p>Tiffany Kao is an artist, designer, and video editor whose work is deeply rooted in her early passion for concept art and world-building. She has previously worked with <a href="https://hello-sunshine.com/">Reese's Book Club/Hello Sunshine</a>,  where she edited and assistant produced an author interview series with Apple Books, featuring releases from Emily Henry and Riley Keough. She has also edited for the creative content team at <a href="https://www.nbcuniversal.com/">NBCUniversal</a> (America's Got Talent, Law & Order SVU, Night Court, Jimmy Fallon).</p>
