--- a/design/index.html
+++ b/design/index.html
@@ -247,17 +247,17 @@
 					        	 <br></br>
 
 						</div>  
-						<img class="gallery-img" src="img/xtown_problem.png"></img>
+						<img class="gallery-img" src="/img/xtown_problem.png"></img>
 					</div>  
 					<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/xtownpage.png"></img>
+		    			 <img class="gallery-img" src="/img/xtownpage.png"></img>
 
 		    		</div>	
 
 		    		<div class = "col-4"> 
 				        <div class="gallery-item">
 					        <video class="gallery-img" autoplay loop muted playsinline>
-					            <source src="img/vaccine_stats.mov" type="video/mp4">
+					            <source src="/img/vaccine_stats.mov" type="video/mp4">
 					        </video>
 					    </div>
 		    		</div>	
@@ -273,62 +273,62 @@
 			<h3>Cover Art Designs</h3>
 			<div class="row gx-2 gallery-container">
 				<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/Metro_Animated.gif"></img>
+		    			 <img class="gallery-img" src="/img/Metro_Animated.gif"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/cannabis_shop.jpg"></img>
+		    			 <img class="gallery-img" src="/img/cannabis_shop.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/fireworks.jpg"></img>
+		    			 <img class="gallery-img" src="/img/fireworks.jpg"></img>
 		    	</div>	
 	    	</div><!-- ROW 2-->
 
 	    	<div class="row gx-2 gallery-container">
 				<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/campaignfinance_unsigned.jpg"></img>
+		    			 <img class="gallery-img" src="/img/campaignfinance_unsigned.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/graffiti.jpg"></img>
+		    			 <img class="gallery-img" src="/img/graffiti.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/hate_crime.jpg"></img>
+		    			 <img class="gallery-img" src="/img/hate_crime.jpg"></img>
 		    	</div>	
 
 	    	</div><!-- ROW 3-->
 
 	    	<div class="row gx-2 gallery-container">
 				<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/vaccine_card.jpeg"></img>
+		    			 <img class="gallery-img" src="/img/vaccine_card.jpeg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/Crosstown-Tree-canopy.jpg"></img>
+		    			 <img class="gallery-img" src="/img/Crosstown-Tree-canopy.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/vaccine_blue.jpg"></img>
+		    			 <img class="gallery-img" src="/img/vaccine_blue.jpg"></img>
 		    	</div>	
 	    	</div><!-- ROW 4-->
 
 	    	<div class="row gx-2 gallery-container">
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/election_ballot.jpg"></img>
+		    			 <img class="gallery-img" src="/img/election_ballot.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/lgbtq_bias.jpg"></img>
+		    			 <img class="gallery-img" src="/img/lgbtq_bias.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/restaurant_crime.jpg"></img>
+		    			 <img class="gallery-img" src="/img/restaurant_crime.jpg"></img>
 		    	</div>	
 	    	</div><!-- ROW 5-->
 
 	    	<div class="row gx-2 gallery-container">
 				<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/RentIncrease_CoverArt_Signed.jpg"></img>
+		    			 <img class="gallery-img" src="/img/RentIncrease_CoverArt_Signed.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/pool_blueprint.jpg"></img>
+		    			 <img class="gallery-img" src="/img/pool_blueprint.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/CoverArt_VaccineTracker_Unsigned.jpg"></img>
+		    			 <img class="gallery-img" src="/img/CoverArt_VaccineTracker_Unsigned.jpg"></img>
 		    	</div>	
 
 
@@ -336,25 +336,25 @@
 
 	    	<div class="row gx-2 gallery-container">
 				<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/RentCoverArtDark.jpg"></img>
+		    			 <img class="gallery-img" src="/img/RentCoverArtDark.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/blind_impersonator.jpg"></img>
+		    			 <img class="gallery-img" src="/img/blind_impersonator.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/coinmachine.jpg"></img>
+		    			 <img class="gallery-img" src="/img/coinmachine.jpg"></img>
 		   		 </div>	
 
 		   	</div><!-- ROW 7-->
 		    <div class="row gx-2 gallery-container">
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/theft.jpg"></img>
+		    			 <img class="gallery-img" src="/img/theft.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/mail_bomb.jpg"></img>
+		    			 <img class="gallery-img" src="/img/mail_bomb.jpg"></img>
 		    	</div>	
 		    	<div class = "col-4"> 
-		    			 <img class="gallery-img" src="img/CovidTracker.jpg"></img>
+		    			 <img class="gallery-img" src="/img/CovidTracker.jpg"></img>
 		    	</div>	
 	    	</div><!-- ROW 8-->
 
