--- a/personal/index.html
+++ b/personal/index.html
@@ -124,33 +124,33 @@
     	<div class="row gx-15">
 	        <div class="col-6">
 	        	<div class="row">
-	                <img src="img/desk.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/desk.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/oc_pleinair.png" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/oc_pleinair.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/newport.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/newport.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/japan1.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/japan1.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	        </div>
 	        <div class="col-6">
 	        	<div class="row">
-	                <img src="img/la-3.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/la-3.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/four.png" alt="Gallery Image 1" class="gallery-img">
+	                <img src="/img/four.png" alt="Gallery Image 1" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/mochi.png" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/mochi.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/snow.png" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/snow.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 	            <div class="row">
-	                <img src="img/nyc_mail.png" alt="Gallery Image 2" class="gallery-img">
+	                <img src="/img/nyc_mail.png" alt="Gallery Image 2" class="gallery-img">
 	            </div>
 
 	        </div>
