--- a/design/index.html
+++ b/design/index.html
@@ -175,11 +175,12 @@
 		#spacer {
 			height:  100px;
 		}
-
+		
 		#name {
+			font-size: 16px;
 			font-family:  helvetica;
-/*		    line-height: 0.8;  Lower overall line height for the container */
-
+			font-weight:  bold;
+			color:  black;
 		}
 
 		#foot{
@@ -203,7 +204,7 @@
 
 			<div class="col-sm-3">
 				<!-- <img id = "logo" src = "img/T_KAO.png" alt = "TEAKAO"> -->
-				<h4 id = "name">TKAO</h4>
+				<h4 id = "name">tiffany kao</h4>
 
 				<!-- <h2>EDITOR, ARTIST</h2>	 -->
 			</div>
