--- a/personal/index.html
+++ b/personal/index.html
@@ -14,14 +14,11 @@
 		}
 
 		#name {
-			font-family:  arial;
-			color: rgb(0, 127, 255);
-			letter-spacing: 1.5px;
-			/*font-family:  monospace;*/
 			font-size: 16px;
-			font-weight:  400;
+			font-family:  helvetica;
+			font-weight:  bold;
+			color:  black;
 		}
-
 
 		li {
 			padding-left:  20px;
@@ -101,7 +98,7 @@
 
 			<div class="col-sm-3">
 				<!-- <img id = "logo" src = "img/T_KAO.png" alt = "TEAKAO"> -->
-				<h4 id = "name">TKAO</h4>
+				<h4 id = "name">tiffany kao</h4>
 
 				<!-- <h2>EDITOR, ARTIST</h2>	 -->
 			</div>
