--- a/about/index.html
+++ b/about/index.html
@@ -11,12 +11,18 @@
 			height:  50px;
 
 		}
-		
+
 		#name {
 			font-size: 16px;
 			font-family:  helvetica;
 			font-weight:  bold;
 			color:  black;
+		}
+
+		h4{
+			font-family:  arial;
+			text-transform:  uppercase;
+			font-size: 12px;
 		}
 
 
