--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -20,6 +20,12 @@
 			color:  black;
 		}
 
+		h4{
+			font-family:  arial;
+			text-transform:  uppercase;
+			font-size: 12px;
+		}
+
 
 		li {
 			padding-left:  20px;
