video page updates

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 		                <div class="gallery-item">
 		                	<a href="https://www.instagram.com/reel/CvOffeoOpI4/">
 					        <video class="gallery-img" autoplay loop muted playsinline>
-					            <source src="img/RockRunning.mp4" type="video/mp4">
+					            <source src="img/RockRunning.mov" type="video/mp4">
 					        </video>
 					        </a>
 					    </div>
