--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<style>
 		body {
-			width: 900px;
+			max-width: 1200px;
 			margin: auto;
 			letter-spacing: 0.28px;
 			/*font-family: monospace;*/
@@ -52,12 +52,12 @@
 			right:  0px;*/
 		}
 
-		#container{
+/*		#container{
 			width: 900px;
 			margin:  auto;
 			padding-bottom: 100px;
 			
-		}
+		}*/
 
         .gallery-container {
         	/*background-color:  red;*/
@@ -338,7 +338,7 @@
 		                <div class="gallery-item">
 		                	<a href="https://www.instagram.com/reel/CvOffeoOpI4/">
 					        <video class="gallery-img" autoplay loop muted playsinline>
-					            <source src="img/RockRunning.mov" type="video/mp4">
+					            <source src="img/RockRunning.mp4" type="video/mp4">
 					        </video>
 					        </a>
 					    </div>
