--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -6,6 +6,14 @@
     <title>Responsive Image Layout</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
+    	body {
+			max-width: 1200px;
+			margin: auto;
+			letter-spacing: 0.28px;
+			/*font-family: monospace;*/
+			/*font-family: 'Inter';font-size: 22px;*/
+	/*				text-decoration: none;*/
+		}
     	#top-row{
 /*					position:  fixed;*/
 			padding-top: 20px;
