--- a/design/index.html
+++ b/design/index.html
@@ -11,7 +11,7 @@
 
 	<style>
 		body {
-			width: 900px;
+			max-width: 1200px;
 			margin: auto;
 			letter-spacing: 0.28px;
 			/*font-family: monospace;*/
