--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -7,13 +7,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
     	body {
-			max-width: 1200px;
+			max-width: 900px;
 			margin: auto;
-			letter-spacing: 0.28px;
 			/*font-family: monospace;*/
 			/*font-family: 'Inter';font-size: 22px;*/
 	/*				text-decoration: none;*/
 		}
+
     	#top-row{
 /*					position:  fixed;*/
 			padding-top: 20px;
@@ -204,13 +204,15 @@
             </div>
 
 
-        </div>
-        <div class="row">
-            <img src="/img/euphoria.png" alt="Gallery Image 1" class="gallery-img">
-        </div>
+        	</div>
+	        <div class="row">
+	            <img src="/img/euphoria.png" alt="Gallery Image 1" class="gallery-img">
+	        </div>
 
-        </div>    
+	        </div>    
         </div>
+        		<div id = "spacer"></div>
+		<div id = "foot"> TIFFANY KAO &copy; 2025</div>
     </div>
 </body>
 </html>
