--- a/concept_art/index.html
+++ b/concept_art/index.html
@@ -99,6 +99,14 @@
                 margin-bottom: 30px;
             }
         }
+
+        
+		#foot{
+			text-align:  center;
+			width: 500px;
+			font-size:  12px;
+			margin:  auto;
+		}
     </style>
 </head>
 
@@ -201,7 +209,7 @@
 
 	        </div>    
         </div>
-        		<div id = "spacer"></div>
+        <div id = "spacer"></div>
 		<div id = "foot"> TIFFANY KAO &copy; 2025</div>
     </div>
 </body>
